# fscan

./: Cargo.toml  LICENSE  readme.md
src/: main.rs
src/fscan/: mod.rs  print.rs  tree.rs
src/lib/: filesystem.rs  mod.rs  print.rs  tree.rs
